<resources>
    <string name="app_name">Mood tracker</string>
    <string name="title_friends">Friends</string>
    <string name="title_today">Today</string>
    <string name="title_statistics">Statistics</string>
    <string name="errorMessage">Button was clicked</string>
    <string name="daily_picture">CREATE DAILY PICTURE</string>
    <string name="daily_notes">ENTER YOUR DAILY NOTES</string>
    <string name="information_to_share">INFORMATION TO SHARE</string>
    <string name="people_share_to">PEOPLE SHARE TO</string>
    <string name="button_color">DAILY COLOR</string>
    <string name="button_picture">DAILY PICTURE</string>
    <string name="button_balance_wheel">BALANCE WHEEL</string>
    <string name="button_notes">DAILY NOTES</string>
    <string name="name_food">Food</string>
    <string name="name_sport">Sport</string>
    <string name="name_social">Social</string>
    <string name="name_sleep">Sleep</string>
    <string name="name_work">Work</string>
    <string name="name_relax">Relax</string>
    <string name="SAVE">SAVE</string>
    <string name="mood_evaluation">Evaluate how you feel today</string>
    <string name="color_selection">Choose color associated with your mood</string>
    <string name="today">TODAY</string>
    <string name="select_all">All</string>
    <string name="picture_selection">Choose picture associated with your mood</string>
</resources>