<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <TextView
        android:id="@+id/information_to_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif"
        android:text="@string/information_to_share"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/information_to_share" />

    <TextView
        android:id="@+id/people_share_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="5dp"
        android:text="@string/people_share_to"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_picture"
        tools:text="@string/people_share_to" />

    <Button
        android:id="@+id/button_color"
        android:layout_width="190dp"
        android:layout_height="92dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_color"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:gravity = "center_horizontal|top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_to_share" />

    <Button
        android:id="@+id/button_picture"
        android:layout_width="190dp"
        android:layout_height="92dp"
        android:layout_marginStart="10dp"
        android:text="@string/button_picture"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:gravity = "center_horizontal|top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_color" />

    <Button
        android:id="@+id/button_wheel"
        android:layout_width="190dp"
        android:layout_height="92dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/button_balance_wheel"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:gravity = "center_horizontal|top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_to_share" />

    <Button
        android:id="@+id/button_notes"
        android:layout_width="190dp"
        android:layout_height="92dp"
        android:layout_marginEnd="10dp"
        android:text="@string/button_notes"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:gravity = "center_horizontal|top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_wheel" />

</androidx.constraintlayout.widget.ConstraintLayout>