<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

     <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/colorPicker"
        app:layout_constraintVertical_bias="0.606"
        app:navGraph="@navigation/mobile_navigation" />

    <Button
        android:id="@+id/dailypicture"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="304dp"
        android:onClick="onClickColorButton"
        android:text="@string/daily_picture"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:icon="@drawable/ic_pictures"
        app:iconPadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dailynotes"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="384dp"
        android:onClick="onClickDailyPictureButton"
        android:text="@string/daily_notes"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:icon="@drawable/ic_pencil"
        app:iconPadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/colorPicker"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/circle_colorpicker"
        android:onClick="onClickDailyPictureButton"
        app:icon="@drawable/ic_pencil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.example.moodtracker.ui.dashboard.CustomActivityChart
        android:id="@+id/customActivityChart"
        android:layout_width="410dp"
        android:layout_height="300dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintLeft_toLeftOf="@id/container"/>


<ImageView
android:id="@+id/icon_food"
android:layout_width="30dp"
android:layout_height="30dp"
android:layout_marginStart="24dp"
android:layout_marginTop="42dp"
app:layout_constraintCircle="@id/customActivityChart"
   app:layout_constraintCircleRadius="150dp"
    app:layout_constraintCircleAngle="332"
app:srcCompat="@drawable/ic_apple"
    tools:ignore="MissingConstraints" />

<ImageView
android:id="@+id/icon_relax"
android:layout_width="30dp"
android:layout_height="30dp"
android:layout_marginStart="24dp"
android:layout_marginTop="34dp"
    app:layout_constraintCircle="@id/customActivityChart"
    app:layout_constraintCircleRadius="155dp"
    app:layout_constraintCircleAngle="33"
app:srcCompat="@drawable/ic_coffee_cup"
    tools:ignore="MissingConstraints" />

<ImageView
android:id="@+id/icon_sport"
android:layout_width="30dp"
android:layout_height="30dp"
android:layout_marginStart="24dp"
android:layout_marginTop="40dp"
    app:layout_constraintCircle="@id/customActivityChart"
    app:layout_constraintCircleRadius="160dp"
    app:layout_constraintCircleAngle="90"
app:srcCompat="@drawable/ic_dumbbell"
    tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/icon_social"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintCircle="@id/customActivityChart"
        app:layout_constraintCircleAngle="147"
        app:layout_constraintCircleRadius="155dp"
        app:srcCompat="@drawable/ic_people"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="255dp" />

    <ImageView
        android:id="@+id/icon_pillow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintCircle="@id/customActivityChart"
        app:layout_constraintCircleAngle="210"
        app:layout_constraintCircleRadius="148dp"
        app:srcCompat="@drawable/ic_pillow"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="245dp" />

    <ImageView
android:id="@+id/icon_work"
android:layout_width="30dp"
android:layout_height="30dp"
android:layout_marginStart="24dp"
android:layout_marginTop="34dp"
    app:layout_constraintCircle="@id/customActivityChart"
    app:layout_constraintCircleRadius="150dp"
    app:layout_constraintCircleAngle="270"
app:srcCompat="@drawable/ic_work"
    tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_work"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="165dp" />

    <TextView
        android:id="@+id/textView_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_food"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="34dp" />

    <TextView
        android:id="@+id/textView_relax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_relax"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="35dp" />

    <TextView
        android:id="@+id/textView_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_sport"
        tools:layout_editor_absoluteX="350dp"
        tools:layout_editor_absoluteY="165dp" />

    <TextView
        android:id="@+id/textView_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_sleep"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="287dp" />

    <TextView
        android:id="@+id/textView_social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_social"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="287dp" />

</androidx.constraintlayout.widget.ConstraintLayout>